--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Paolo Reyes</title>
 </head>
 <body>
-    <!-- Top -->
+    <!-- Inicio -->
     <div class="top">
         <nav>
             <h2 class="logo">Porta<span>folio</span></h2>
@@ -39,5 +39,17 @@
             </div>
         </div>
     </div>
+    <!-- Sobre mi -->
+    <section class="about">
+        <div class="main">
+            <img src="images/main.jpg">
+            <div class="about-text">
+                <h2>Acerca de Mi</h2>
+                <h5>Robotista <span>& Programador</span></h5>
+                <p align="justify">Soy un estudiante de ingeniería en robótica y sistemas digitales en el Tecnológico de Monterrey. Actualmente fungo como mentor de diversos equipos de robótica a nivel nacional para la universidad Tecmilenio y manejo un canal de Youtube donde hago videos de temas complejos de ingeniería de manera didáctica. A lo largo de mi vida me he especializado en el área de la robótica en dónde soy capaz de elaborar robots complejos por mi cuenta incluyendo el modelado 3D, construcción, cableado y programación. Diversificarme en todas estas áreas me ha traido habilidades importantes como la especialización en diseño mecánico de sistemas robóticos, la operación de máquinas y herramientas complejas como CNC's, la construcción de sistemas digitales para aplicaciones específicas y el dominio de lenguajes de programación backend.</p>
+                <button type="button">Hablemos</button>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
