New Image Source

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <!-- Sobre mi -->
     <section class="about">
         <div class="main">
-            <img src="../images/main.jpg">
+            <img src="https://github.com/PaoloReyes/web/blob/main/images/main.JPG">
             <div class="about-text">
                 <h2>Acerca de Mi</h2>
                 <h5>Robotista <span>& Programador</span></h5>
