--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="container">
                 <div class="row">
                     <div class="about-col-1">
-                        <img src="images/paolo.jpg">
+                        <img src="https://github.com/PaoloReyes/web/blob/main/images/paolo.JPG?raw=true">
                     </div>
                     <div class="about-col-2">
                         <h1 class="subtitle">Acerca de Mi</h1>
