--- a/index.html
+++ b/index.html
@@ -81,19 +81,19 @@
                         <i class="fa-solid fa-screwdriver-wrench"></i>
                         <h2>Manufactura de Piezas</h2>
                         <p align="justify">Puedo ayudarte a traer a la vida cualquier proyecto manufacturando cualquier pieza con mis máquinas CNC.</p>
-                        <a href="/servicios/manufactura.html">¿Quieres saber más?</a>
+                        <a href="https://github.com/PaoloReyes/web/blob/main/servicios/manufactura.html">¿Quieres saber más?</a>
                     </div>
                     <div>
                         <i class="fa-solid fa-code"></i>
                         <h2>Automatización</h2>
                         <p align="justify">Puedo ayudarte a automatizar procesos en tu empresa por medio de la creación de programas a tu medidad que puedan reducir costos como la autogestión de inventario, control de empleados, etc.</p>
-                        <a href="/servicios/automatización.html">¿Quieres saber más?</a>
+                        <a href="https://github.com/PaoloReyes/web/blob/main/servicios/automatización.html">¿Quieres saber más?</a>
                     </div>
                     <div>
                         <i class="fa-solid fa-microchip"></i>
                         <h2>Desarrollo de Dispositivos Electrónicos</h2>
                         <p align="justify">Puedo ayudarte a inventar cualquier dispositivo electrónico que te facilite tus actividades diarias como contadores de aforo para tu negocio, juguetes a control remoto, luces que se conecten a alexa o cualquier otro dispositivo IoT.</p>
-                        <a href="/servicios/desarrollo.html">¿Quieres saber más?</a>
+                        <a href="https://github.com/PaoloReyes/web/blob/main/servicios/desarrollo.html">¿Quieres saber más?</a>
                     </div>
                 </div>
             </div>
