--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         <i class="fa-solid fa-screwdriver-wrench"></i>
                         <h2>Manufactura de Piezas</h2>
                         <p align="justify">Puedo ayudarte a traer a la vida cualquier proyecto manufacturando cualquier pieza con mis máquinas CNC.</p>
-                        <a href="https://github.com/PaoloReyes/web/blob/main/servicios/manufactura.html">¿Quieres saber más?</a>
+                        <a href="https://raw.githubusercontent.com/PaoloReyes/web/main/servicios/manufactura.html">¿Quieres saber más?</a>
                     </div>
                     <div>
                         <i class="fa-solid fa-code"></i>
@@ -93,7 +93,7 @@
                         <i class="fa-solid fa-microchip"></i>
                         <h2>Desarrollo de Dispositivos Electrónicos</h2>
                         <p align="justify">Puedo ayudarte a inventar cualquier dispositivo electrónico que te facilite tus actividades diarias como contadores de aforo para tu negocio, juguetes a control remoto, luces que se conecten a alexa o cualquier otro dispositivo IoT.</p>
-                        <a href="https://github.com/PaoloReyes/web/blob/main/servicios/desarrollo.html">¿Quieres saber más?</a>
+                        <a href="/servicios/desarrollo.html">¿Quieres saber más?</a>
                     </div>
                 </div>
             </div>
