Social Media in Services Tab

--- a/servicios/manufactura.html
+++ b/servicios/manufactura.html
@@ -49,10 +49,10 @@
                         <p align="justify" class="instructions">Por favor comunícate por alguno de estos medios o dejando tu mensaje en la parte de la derecha y yo me pondré en contacto contigo en un lapso menor a 24 horas para hablar sobre tu proyecto.</p>
                         <p><i class="fas fa-paper-plane"></i>contactopaoloinspires@gmail.com</p>
                         <div class="social-icons">
-                            <a href=""><i class="fab fa-facebook"></i></a>
-                            <a href=""><i class="fab fa-youtube"></i></a>
-                            <a href=""><i class="fab fa-instagram"></i></a>
-                            <a href=""><i class="fab fa-linkedin"></i></a>
+                            <a href="https://www.facebook.com/paolo.reyes.3114935"><i class="fab fa-facebook"></i></a>
+                            <a href="https://www.youtube.com/channel/UCHqwxdkQA5NV59S65NUWgfg"><i class="fab fa-youtube"></i></a>
+                            <a href="https://www.instagram.com/yosoypaoloxd/"><i class="fab fa-instagram"></i></a>
+                            <a href="https://www.linkedin.com/in/paolo-alfonso-reyes-ramirez-663695200/"><i class="fab fa-linkedin"></i></a>
                         </div>
                     </div>
                     <div class="contact-right">
