--- a/servicios/manufactura.html
+++ b/servicios/manufactura.html
@@ -10,10 +10,12 @@
     </head>
     <body>
         <div class="header-service">
+            <a href="https://paoloreyes.github.io/web/"><i class="fa-solid fa-angles-left"></i></a>
             <h2>Servicio de Manufactura de Piezas</h2>
+            <span></span>
         </div>
         <div id="Que_Hacemos">
-            <div class="container">
+            <div class="container-service">
                 <div class="row first-section-service">
                     <div class="service-col-1">
                         <h1 class="subtitle">¿Qué Hacemos?</h1>
