Automation Services Finished

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         <i class="fa-solid fa-code"></i>
                         <h2>Automatización</h2>
                         <p align="justify">Puedo ayudarte a automatizar procesos en tu empresa por medio de la creación de programas a tu medidad que puedan reducir costos como la autogestión de inventario, control de empleados, etc.</p>
-                        <a href="https://paoloreyes.github.io/web/servicios/automatización.html">¿Quieres saber más?</a>
+                        <a href="https://paoloreyes.github.io/web/servicios/automatizacion.html">¿Quieres saber más?</a>
                     </div>
                     <div>
                         <i class="fa-solid fa-microchip"></i>
@@ -186,6 +186,6 @@
                 sidemenu.style.right = "-200px";
             }
         </script>
-        <script src="../js/script.js"></script>
+        <script src="/js/script.js"></script>
     </body>
 </html>
