--- a/servicios/manufactura.html
+++ b/servicios/manufactura.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <div class="header-service">
-            <a href="https://paoloreyes.github.io/web/"><i class="fa-solid fa-angles-left"></i></a>
+            <a href="https://paoloreyes.github.io/web/#servicios"><i class="fa-solid fa-angles-left"></i></a>
             <h2>Servicio de Manufactura de Piezas</h2>
             <span></span>
         </div>
