Adding Topics to Mails

--- a/index.html
+++ b/index.html
@@ -81,19 +81,19 @@
                         <i class="fa-solid fa-screwdriver-wrench"></i>
                         <h2>Manufactura de Piezas</h2>
                         <p align="justify">Puedo ayudarte a traer a la vida cualquier proyecto manufacturando cualquier pieza con mis máquinas CNC.</p>
-                        <a href="https://paoloreyes.github.io/web/servicios/manufactura">¿Quieres saber más?</a>
+                        <a href="https://paoloreyes.github.io/web/servicios/manufactura" onclick="set_topic('Manufactura')">¿Quieres saber más?</a>
                     </div>
                     <div>
                         <i class="fa-solid fa-code"></i>
                         <h2>Automatización</h2>
                         <p align="justify">Puedo ayudarte a automatizar procesos en tu empresa por medio de la creación de programas a tu medidad que puedan reducir costos como la autogestión de inventario, control de empleados, etc.</p>
-                        <a href="https://paoloreyes.github.io/web/servicios/automatizacion">¿Quieres saber más?</a>
+                        <a href="https://paoloreyes.github.io/web/servicios/automatizacion" onclick="set_topic('Automatización')">¿Quieres saber más?</a>
                     </div>
                     <div>
                         <i class="fa-solid fa-microchip"></i>
                         <h2>Desarrollo de Dispositivos Electrónicos</h2>
                         <p align="justify">Puedo ayudarte a inventar cualquier dispositivo electrónico que te facilite tus actividades diarias como contadores de aforo para tu negocio, juguetes a control remoto, luces que se conecten a alexa o cualquier otro dispositivo IoT.</p>
-                        <a href="https://paoloreyes.github.io/web/servicios/desarrollo">¿Quieres saber más?</a>
+                        <a href="https://paoloreyes.github.io/web/servicios/desarrollo" onclick="set_topic('Desarrollo')">¿Quieres saber más?</a>
                     </div>
                 </div>
             </div>
