--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <title>Paolo Reyes</title>
         <script src="https://kit.fontawesome.com/9041eafba2.js" crossorigin="anonymous"></script>
     </head>    
-    <body>        
+    <body onload="set_topic('Contacto')">        
         <!-- Inicio -->
         <div id="inicio">
             <div class="container">
