Topic Selection for Mail

--- a/servicios/manufactura.html
+++ b/servicios/manufactura.html
@@ -9,7 +9,7 @@
         <script src="https://kit.fontawesome.com/9041eafba2.js" crossorigin="anonymous"></script>
         <script src="https://smtpjs.com/v3/smtp.js"></script>
     </head>
-    <body onload="set_topic('Manufactura')">
+    <body>
         <div class="header-service">
             <a href="https://paoloreyes.github.io/web/#servicios"><i class="fa-solid fa-angles-left"></i></a>
             <h2>Servicio de Manufactura de Piezas</h2>
@@ -79,6 +79,7 @@
                 <p>Copyright © 2023 Paolo Reyes. Todos los derechos reservados.</p>
             </div>
         </div>
+        <div id="topico">Manufactura</div>
         <script src="../js/script.js"></script>
     </body>
 </html>
