--- a/index.html
+++ b/index.html
@@ -193,6 +193,6 @@
                 sidemenu.style.right = "-200px";
             }
         </script>
-        <script src="/js/script.js"></script>
+        <script src="js/script.js"></script>
     </body>
 </html>
