Contact form full functionality added

--- a/servicios/automatizacion.html
+++ b/servicios/automatizacion.html
@@ -62,7 +62,7 @@
                         <form name="enviar">
                             <input type="text" name="Name" placeholder="Nombre" required id="nombre">
                             <input type="email" name="Email" placeholder="Correo" required id="correo_destino">
-                            <textarea name="Message" rows="6" placeholder="Tu Mensaje" id="mensaje"></textarea>
+                            <textarea name="Message" rows="6" placeholder="Tu Mensaje" required id="mensaje"></textarea>
                             <div class="captcha">
                                 <h2 class="subsubtitle">CAPTCHA: </h2>
                                 <div id="image" class="inline" selectable="False"></div>
