--- a/index.html
+++ b/index.html
@@ -148,9 +148,9 @@
                     </div>
                     <div class="contact-right">
                         <form name="enviar">
-                            <input type="text" name="Name" placeholder="Nombre" required>
-                            <input type="email" name="Email" placeholder="Correo" required>
-                            <textarea name="Message" rows="6" placeholder="Tu Mensaje"></textarea>
+                            <input type="text" name="Name" placeholder="Nombre" required id="nombre">
+                            <input type="email" name="Email" placeholder="Correo" required id="correo_destino">
+                            <textarea name="Message" rows="6" placeholder="Tu Mensaje" required id="mensaje"></textarea>
                             <div class="captcha">
                                 <h2 class="subsubtitle">CAPTCHA: </h2>
                                 <div id="image" class="inline" selectable="False"></div>
