Added SMTP library to home page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="css/style.css">
         <title>Paolo Reyes</title>
         <script src="https://kit.fontawesome.com/9041eafba2.js" crossorigin="anonymous"></script>
+        <script src="https://smtpjs.com/v3/smtp.js"></script>
     </head>    
     <body>        
         <!-- Inicio -->
